# esi

./: .gitignore  Cargo.toml  README.md  RELEASING.md  test_compound_debug.rs  test_default_value.rs
.github/workflows/: release.yml  test.yml
esi/: Cargo.toml
esi/benches/: README.md  interpolated_text_bench.rs  parser_benchmarks.rs
esi/compiler-macros/: Cargo.toml
esi/compiler-macros/src/: lib.rs
esi/src/: abi.rs  bytecode_generator.rs  cache.rs  compiler.rs  compiler_types.rs  config.rs  document.rs  element_handler.rs  error.rs  expression.rs  functions.rs  lib.rs  lib.rs.bak  literals.rs  new_parse.rs  opcodes.rs  parse.rs  parser.rs  parser_str_backup.rs  parser_types.rs  variables.rs  vm.rs  vm_types.rs
esi/tests/: dca_tests.rs  esi-tests.rs  esi_tests.rs  eval_tests.rs  parse.rs  parser.rs  parser.rs.bak  streaming_behavior.rs  zero_copy.rs
esi_example_app/src/: index.html  main.rs
examples/esi_dca_example/: Cargo.toml  fastly.toml
examples/esi_dca_example/src/: index.html  main.rs
examples/esi_example_advanced_error_handling/: Cargo.toml
examples/esi_example_advanced_error_handling/src/: main.rs
examples/esi_example_minimal/: Cargo.toml  fastly.toml
examples/esi_example_minimal/src/: main.rs
examples/esi_example_variants/: Cargo.toml  fastly.toml
examples/esi_example_variants/src/: main.rs
examples/esi_try_example/: Cargo.toml  rust-toolchain.toml
examples/esi_try_example/src/: main.rs
examples/esi_vars_example/: Cargo.toml  fastly.toml
examples/esi_vars_example/src/: index.html
