[workspace]

members = [
    "esi",
    "examples/esi_example_minimal",
    "examples/esi_example_advanced_error_handling",
    "examples/esi_try_example",
    "examples/esi_vars_example",
    "examples/esi_example_variants",
]

[workspace.package]
version = "0.6.1"
authors = [
    "Kailan Blanks <kblanks@fastly.com>",
    "Vadim Getmanshchuk <vadim@fastly.com>",
    "Tyler McMullen <tyler@fastly.com>",
]
license = "MIT"
edition = "2018"
