[package]
name = "esi"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
description = "A streaming parser and executor for Edge Side Includes"
repository = "https://github.com/fastly/esi"
readme = "./README.md"

[dependencies]
quick-xml = "0.38.0"
thiserror = "2.0.6"
fastly = "^0.11"
log = "^0.4"
regex = "1.11.1"
html-escape = "0.2.13"
nom = "7.1.3"

[dev-dependencies]
env_logger = "^0.11"
