[package]
name = "esi"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
description = "A streaming parser and executor for Edge Side Includes"
repository = "https://github.com/fastly/esi"
readme = "./README.md"

[dependencies]
thiserror = "2.0.6"
fastly = "^0.11"
log = "^0.4"
regex = "1.11.1"
html-escape = "0.2.13"
nom = "8"
bytes = "1.5"
base64 = "0.22"
percent-encoding = "2.3"
md5 = "0.7"
chrono = { version = "0.4", default-features = false, features = [
    "clock",
    "std",
] }
rand = "0.8"

[dev-dependencies]
env_logger = "^0.11"
criterion = { version = "0.5", default-features = false }

[[bench]]
name = "parser_benchmarks"
harness = false
